--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,164 @@
-<ul>
-{{#each}}
-  <li>{{this}}</li>
-{{/each}}
-</ul>
+<div class="main">
+
+  <div class="container">
+
+    <div class="row">
+
+      <div class="col-md-6 col-xs-12">
+
+        <div class="widget widget-nopad stacked">
+
+          <div class="widget-header">
+            <i class="icon-list-alt"></i>
+            <h3>Recent News</h3>
+          </div> <!-- /widget-header -->
+
+          <div class="widget-content">
+
+            <ul class="news-items">
+              <li>
+
+              <div class="news-item-detail">
+                <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
+                <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+              </div>
+
+              <div class="news-item-date">
+                <span class="news-item-day">08</span>
+                <span class="news-item-month">Mar</span>
+              </div>
+              </li>
+              <li>
+              <div class="news-item-detail">
+                <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
+                <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+              </div>
+
+              <div class="news-item-date">
+                <span class="news-item-day">08</span>
+                <span class="news-item-month">Mar</span>
+              </div>
+              </li>
+              <li>
+              <div class="news-item-detail">
+                <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
+                <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+              </div>
+
+              <div class="news-item-date">
+                <span class="news-item-day">08</span>
+                <span class="news-item-month">Mar</span>
+              </div>
+              </li>
+            </ul>
+
+          </div> <!-- /widget-content -->
+
+        </div> <!-- /widget -->
+
+
+        <div class="widget stacked">
+
+          <div class="widget-header">
+            <i class="icon-file"></i>
+            <h3>Content</h3>
+          </div> <!-- /widget-header -->
+
+          <div class="widget-content">
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+
+          </div> <!-- /widget-content -->
+
+        </div> <!-- /widget -->
+
+      </div> <!-- /span6 -->
+
+
+      <div class="col-md-5">
+
+        <div class="widget stacked widget-table action-table">
+
+          <div class="widget-header">
+            <i class="icon-th-list"></i>
+            <h3>Top 10 brute hackers</h3>
+          </div> <!-- /widget-header -->
+
+          <div class="widget-content">
+
+            <table class="table table-striped table-bordered">
+              <thead>
+                <tr>
+                  <th>Rank</th>
+                  <th>Name</th>
+                  <th class="td-actions">Points</th>
+                </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td>1</td>
+                <td><a class="rated-user user-red" href="#">Grandmaster</a></td>
+                <td>2200+</td>
+              </tr>
+
+              <tr>
+                <td>2</td>
+                <td><a class="rated-user user-orange" href="#">Master</a></td>
+                <td>1900 - 2199</td>
+              </tr>
+
+              <tr>
+                <td>3</td>
+                <td><a class="rated-user user-violet" href="#">Canditate Master</a></td>
+                <td>1700 - 1899</td>
+              </tr>
+
+              <tr>
+                <td>4</td>
+                <td><a class="rated-user user-blue" href="#">Expert</a></td>
+                <td>1500 - 1699</td>
+              </tr>
+
+              <tr>
+                <td>5</td>
+                <td><a class="user-green rated-user" href="#">Specialist</a></td>
+                <td>1350 - 1499</td>
+              </tr>
+
+              <tr>
+                <td>6</td>
+                <td><a class="rated-user user-gray" href="#">Newbie</a></td>
+                <td>0 - 1199</td>
+              </tr>
+
+              </tbody>
+              <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
+            </table>
+          </div> <!-- /widget-content -->
+
+        </div> <!-- /widget -->
+
+      </div> <!-- /span6 -->
+
+    </div> <!-- /row -->
+
+  </div> <!-- /container -->
+
+</div> <!-- /main -->
