--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -7,7 +7,7 @@
         <span class="sr-only">Toggle navigation</span>
         <i class="icon-cog"></i>
       </button>
-      <a class="navbar-brand" href="./index.html">Brutehack <sup>alpha</sup></a>
+      <a class="navbar-brand" href="./index.html">BruteHack <sup>alpha</sup></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
