Fix wrapping issue on leaderboard

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,7 @@
 
     <div class="row">
 
-      <div class="col-md-6 col-xs-12">
+      <div class="col-md-7">
 
         <div class="widget widget-nopad stacked">
 
@@ -108,7 +108,7 @@
                 <tr>
                   <th>Rank</th>
                   <th>Name</th>
-                  <th class="td-actions">Points</th>
+                  <th>Points</th>
                 </tr>
               </thead>
               <tbody>
