Move sub navigation to a partial

--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -7,7 +7,7 @@
         <span class="sr-only">Toggle navigation</span>
         <i class="icon-cog"></i>
       </button>
-      <a class="navbar-brand" href="./index.html">BruteHack <sup>alpha</sup></a>
+      <a class="navbar-brand" href="/">BruteHack <sup>alpha</sup></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,94 +56,4 @@
     </div><!-- /.navbar-collapse -->
   </div> <!-- /.container -->
 </nav>
-
-
-
-
-
-<div class="subnavbar">
-
-  <div class="subnavbar-inner">
-
-    <div class="container">
-
-      <a href="javascript:;" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <i class="icon-reorder"></i>
-
-      </a>
-
-      <div class="collapse subnav-collapse">
-        <ul class="mainnav">
-
-          <li class="active">
-          <a href="./index.html">
-            <i class="icon-home"></i>
-            <span>Home</span>
-          </a>
-          </li>
-
-          <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-th"></i>
-            <span>Components</span>
-            <b class="caret"></b>
-          </a>
-
-          <ul class="dropdown-menu">
-            <li><a href="./elements.html">Elements</a></li>
-            <li><a href="./forms.html">Form Styles</a></li>
-            <li><a href="./jqueryui.html">jQuery UI</a></li>
-            <li><a href="./charts.html">Charts</a></li>
-            <li><a href="./popups.html">Popups/Notifications</a></li>
-          </ul>
-          </li>
-
-          <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-copy"></i>
-            <span>Sample Pages</span>
-            <b class="caret"></b>
-          </a>
-
-          <ul class="dropdown-menu">
-            <li><a href="./pricing.html">Pricing Plans</a></li>
-            <li><a href="./faq.html">FAQ's</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./reports.html">Reports</a></li>
-            <li><a href="./account.html">User Account</a></li>
-          </ul>
-          </li>
-
-          <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-external-link"></i>
-            <span>Extra Pages</span>
-            <b class="caret"></b>
-          </a>
-
-          <ul class="dropdown-menu">
-            <li><a href="./login.html">Login</a></li>
-            <li><a href="./signup.html">Signup</a></li>
-            <li><a href="./error.html">Error</a></li>
-            <li class="dropdown-submenu">
-            <a tabindex="-1" href="#">More options</a>
-            <ul class="dropdown-menu">
-              <li><a tabindex="-1" href="#">Second level</a></li>
-
-              <li><a href="#">Second level</a></li>
-              <li><a href="#">Second level</a></li>
-            </ul>
-            </li>
-          </ul>
-          </li>
-
-        </ul>
-      </div> <!-- /.subnav-collapse -->
-
-    </div> <!-- /container -->
-
-  </div> <!-- /subnavbar-inner -->
-
-</div> <!-- /subnavbar -->
 
