--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -64,7 +64,7 @@
 
           <div class="widget-header">
             <i class="icon-file"></i>
-            <h3>Content</h3>
+            <h3><a href="#">Contest #101 editorial</a></h3>
           </div> <!-- /widget-header -->
 
           <div class="widget-content">
