--- a/public/assets/dashboard.css
+++ b/public/assets/dashboard.css
@@ -1,3 +1,5 @@
+/*------------------------------------------------------------------
+
 
 /*------------------------------------------------------------------
 [2. Stats / .stats]
