Fix spelling error

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -126,7 +126,7 @@
 
               <tr>
                 <td>3</td>
-                <td><a class="rated-user user-violet" href="#">Canditate Master</a></td>
+                <td><a class="rated-user user-violet" href="#">Candidate Master</a></td>
                 <td>1700 - 1899</td>
               </tr>
 
