Use FontAwesome 4 syntax

--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -6,7 +6,7 @@
 
       <a href="javascript:;" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
         <span class="sr-only">Toggle navigation</span>
-        <i class="icon-reorder"></i>
+        <i class="fa fa-reorder"></i>
 
       </a>
 
@@ -15,14 +15,14 @@
 
           <li class="active">
           <a href="./index.html">
-            <i class="icon-home"></i>
+            <i class="fa fa-home"></i>
             <span>Home</span>
           </a>
           </li>
 
           <li class="dropdown">
           <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-th"></i>
+            <i class="fa fa-th"></i>
             <span>Components</span>
             <b class="caret"></b>
           </a>
@@ -38,7 +38,7 @@
 
           <li class="dropdown">
           <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-copy"></i>
+            <i class="fa fa-copy"></i>
             <span>Sample Pages</span>
             <b class="caret"></b>
           </a>
@@ -54,7 +54,7 @@
 
           <li class="dropdown">
           <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-external-link"></i>
+            <i class="fa fa-external-link"></i>
             <span>Extra Pages</span>
             <b class="caret"></b>
           </a>
