--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,7 @@
         <div class="widget widget-nopad stacked">
 
           <div class="widget-header">
-            <i class="icon-list-alt"></i>
+            <i class="fa fa-list-alt"></i>
             <h3>Recent News</h3>
           </div> <!-- /widget-header -->
 
@@ -63,7 +63,7 @@
         <div class="widget stacked">
 
           <div class="widget-header">
-            <i class="icon-file"></i>
+            <i class="fa fa-file-text"></i>
             <h3><a href="#">Contest #101 editorial</a></h3>
           </div> <!-- /widget-header -->
 
