--- a/app/templates/views/top-hackers.hbs
+++ b/app/templates/views/top-hackers.hbs
@@ -1,7 +1,7 @@
 <div class="widget stacked widget-table action-table">
 
   <div class="widget-header">
-    <i class="icon-th-list"></i>
+    <i class="fa fa-th-list"></i>
     <h3>Top 10 brute hackers</h3>
   </div> <!-- /widget-header -->
 
