--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -4,7 +4,7 @@
 
     <div class="container">
 
-      <a href="javascript:;" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
+      <a href="#" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
         <span class="sr-only">Toggle navigation</span>
         <i class="fa fa-reorder"></i>
 
@@ -14,65 +14,50 @@
         <ul class="mainnav">
 
           <li class="active">
-          <a href="./index.html">
-            <i class="fa fa-home"></i>
-            <span>Home</span>
-          </a>
+            {{#link-to 'index'}}
+              <i class="fa fa-home"></i>
+              <span>Home</span>
+            {{/link-to}}
           </li>
 
           <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-th"></i>
-            <span>Components</span>
+            <span>Contests</span>
             <b class="caret"></b>
           </a>
 
           <ul class="dropdown-menu">
-            <li><a href="./elements.html">Elements</a></li>
-            <li><a href="./forms.html">Form Styles</a></li>
-            <li><a href="./jqueryui.html">jQuery UI</a></li>
-            <li><a href="./charts.html">Charts</a></li>
-            <li><a href="./popups.html">Popups/Notifications</a></li>
+            <li><a href="#">Single Round Matches</a></li>
+            <li><a href="#">Marathons</a></li>
           </ul>
           </li>
 
           <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-copy"></i>
-            <span>Sample Pages</span>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-gears"></i>
+            <span>Practice</span>
             <b class="caret"></b>
           </a>
 
           <ul class="dropdown-menu">
-            <li><a href="./pricing.html">Pricing Plans</a></li>
-            <li><a href="./faq.html">FAQ's</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./reports.html">Reports</a></li>
-            <li><a href="./account.html">User Account</a></li>
+            <li><a href="#">Single Round Matches</a></li>
+            <li><a href="#">Marathons</a></li>
           </ul>
           </li>
 
           <li class="dropdown">
-          <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-external-link"></i>
-            <span>Extra Pages</span>
-            <b class="caret"></b>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-trophy"></i>
+            <span>Ratings</span>
           </a>
+          </li>
 
-          <ul class="dropdown-menu">
-            <li><a href="./login.html">Login</a></li>
-            <li><a href="./signup.html">Signup</a></li>
-            <li><a href="./error.html">Error</a></li>
-            <li class="dropdown-submenu">
-            <a tabindex="-1" href="#">More options</a>
-            <ul class="dropdown-menu">
-              <li><a tabindex="-1" href="#">Second level</a></li>
-
-              <li><a href="#">Second level</a></li>
-              <li><a href="#">Second level</a></li>
-            </ul>
-            </li>
-          </ul>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-question"></i>
+            <span>Help</span>
+          </a>
           </li>
 
         </ul>
