--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -15,34 +15,34 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
 
-        <a href="javscript:;" class="dropdown-toggle" data-toggle="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <i class="icon-cog"></i>
           Settings
           <b class="caret"></b>
         </a>
 
         <ul class="dropdown-menu">
-          <li><a href="./account.html">Account Settings</a></li>
-          <li><a href="javascript:;">Privacy Settings</a></li>
+          <li><a href="#">Account Settings</a></li>
+          <li><a href="#">Privacy Settings</a></li>
           <li class="divider"></li>
-          <li><a href="javascript:;">Help</a></li>
+          <li><a href="#">Help</a></li>
         </ul>
 
         </li>
 
         <li class="dropdown">
 
-        <a href="javscript:;" class="dropdown-toggle" data-toggle="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <i class="icon-user"></i>
-          Rod Howard
+          Fayimora Femi-Balogun
           <b class="caret"></b>
         </a>
 
         <ul class="dropdown-menu">
-          <li><a href="javascript:;">My Profile</a></li>
-          <li><a href="javascript:;">My Groups</a></li>
+          <li><a href="#">My Profile</a></li>
+          <li><a href="#">My Groups</a></li>
           <li class="divider"></li>
-          <li><a href="javascript:;">Logout</a></li>
+          <li><a href="#">Logout</a></li>
         </ul>
 
         </li>
