--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -7,13 +7,12 @@
       <a href="#" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
         <span class="sr-only">Toggle navigation</span>
         <i class="fa fa-reorder"></i>
-
       </a>
 
       <div class="collapse subnav-collapse">
         <ul class="mainnav">
 
-          <li class="active">
+          <li>
             {{#link-to 'index'}}
               <i class="fa fa-home"></i>
               <span>Home</span>
@@ -21,43 +20,43 @@
           </li>
 
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-th"></i>
-            <span>Contests</span>
-            <b class="caret"></b>
-          </a>
+            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+              <i class="fa fa-th"></i>
+              <span>Contests</span>
+              <b class="caret"></b>
+            {{/link-to}}
 
-          <ul class="dropdown-menu">
-            <li><a href="#">Single Round Matches</a></li>
-            <li><a href="#">Marathons</a></li>
-          </ul>
+            <ul class="dropdown-menu">
+              <li>{{link-to 'Single Round Matches'}}</li>
+              <li>{{link-to 'Marathons'}}</li>
+            </ul>
           </li>
 
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-gears"></i>
-            <span>Practice</span>
-            <b class="caret"></b>
-          </a>
+            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+              <i class="fa fa-gears"></i>
+              <span>Practice</span>
+              <b class="caret"></b>
+            {{/link-to}}
 
-          <ul class="dropdown-menu">
-            <li><a href="#">Single Round Matches</a></li>
-            <li><a href="#">Marathons</a></li>
-          </ul>
+            <ul class="dropdown-menu">
+              <li>{{link-to 'Single Round Matches'}}</li>
+              <li>{{link-to 'Marathons'}}</li>
+            </ul>
           </li>
 
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-trophy"></i>
-            <span>Ratings</span>
-          </a>
+            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+              <i class="fa fa-trophy"></i>
+              <span>Ratings</span>
+            {{/link-to}}
           </li>
 
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-question"></i>
-            <span>Help</span>
-          </a>
+            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+              <i class="fa fa-question"></i>
+              <span>Help</span>
+            {{/link-to}}
           </li>
 
         </ul>
