Move recent news into a view so it can be reused later

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,60 +6,7 @@
 
       <div class="col-md-7">
 
-        <div class="widget widget-nopad stacked">
-
-          <div class="widget-header">
-            <i class="fa fa-list-alt"></i>
-            <h3>Recent News</h3>
-          </div> <!-- /widget-header -->
-
-          <div class="widget-content">
-
-            <ul class="news-items">
-              <li>
-
-              <div class="news-item-detail">
-                <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
-                <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-              </div>
-
-              <div class="news-item-date">
-                <span class="news-item-day">08</span>
-                <span class="news-item-month">Mar</span>
-              </div>
-              </li>
-              <li>
-              <div class="news-item-detail">
-                <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
-                <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-              </div>
-
-              <div class="news-item-date">
-                <span class="news-item-day">08</span>
-                <span class="news-item-month">Mar</span>
-              </div>
-              </li>
-              <li>
-              <div class="news-item-detail">
-                <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
-                <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-              </div>
-
-              <div class="news-item-date">
-                <span class="news-item-day">08</span>
-                <span class="news-item-month">Mar</span>
-              </div>
-              </li>
-            </ul>
-
-          </div> <!-- /widget-content -->
-
-        </div> <!-- /widget -->
-
-
+        {{view 'recent_news'}}
         <div class="widget stacked">
 
           <div class="widget-header">
