Fix broken footer

--- a/app/templates/_footer.hbs
+++ b/app/templates/_footer.hbs
@@ -4,11 +4,11 @@
 
     <div class="row">
 
-      <div id="footer-copyright" class="span6">
+      <div id="footer-copyright" class="col-md-6">
         &copy; 2013-14 Fayimora
       </div> <!-- /span6 -->
 
-      <div id="footer-terms" class="span6">
+      <div id="footer-terms" class="col-md-6">
         App developed by <a href="#" target="_blank">Fayimora Femi-Balogun</a>
       </div> <!-- /.span6 -->
 
