Might as well add my url to the footer

--- a/app/templates/_footer.hbs
+++ b/app/templates/_footer.hbs
@@ -9,7 +9,7 @@
       </div> <!-- /span6 -->
 
       <div id="footer-terms" class="col-md-6">
-        App developed by <a href="#" target="_blank">Fayimora Femi-Balogun</a>
+        App developed by <a href="http://fayimora.com" target="_blank">Fayimora Femi-Balogun</a>
       </div> <!-- /.span6 -->
 
     </div> <!-- /row -->
