More fontawesome 4 updates

--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -5,7 +5,7 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
         <span class="sr-only">Toggle navigation</span>
-        <i class="icon-cog"></i>
+        <i class="fa fa-cog"></i>
       </button>
       {{#link-to '' class="navbar-brand"}}BruteHack <sup>alpha</sup>{{/link-to}}
     </div>
@@ -16,7 +16,7 @@
         <li class="dropdown">
 
       {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
-        <i class="icon-cog"></i>
+        <i class="fa fa-cog"></i>
         Settings
         <b class="caret"></b>
       {{/link-to}}
@@ -33,7 +33,7 @@
         <li class="dropdown">
 
         {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
-          <i class="icon-user"></i>
+          <i class="fa fa-user"></i>
           Fayimora Femi-Balogun
           <b class="caret"></b>
         {{/link-to}}
