--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -4,9 +4,9 @@
 
     <div class="container">
 
-      <a href="#" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
+      <a href="javascript:;" class="subnav-toggle" data-toggle="collapse" data-target=".subnav-collapse">
         <span class="sr-only">Toggle navigation</span>
-        <i class="fa fa-reorder"></i>
+        <i class="fa fa-bars"></i>
       </a>
 
       <div class="collapse subnav-collapse">
