Move main and container divs into application template

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,11 @@
 {{partial "navigation"}}
 
 {{partial "subnavigation"}}
-{{outlet}}
+
+<div class="main">
+  <div class="container">
+    {{outlet}}
+  </div>
+</div>
 
 {{partial "footer"}}
