--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -7,7 +7,7 @@
         <span class="sr-only">Toggle navigation</span>
         <i class="fa fa-cog"></i>
       </button>
-      {{#link-to '' class="navbar-brand"}}BruteHack <sup>alpha</sup>{{/link-to}}
+      {{#link-to 'index' class="navbar-brand"}}BruteHack <sup>alpha</sup>{{/link-to}}
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
