--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,44 +1,48 @@
-<div class="row">
+<div class="main">
 
-  <div class="col-md-7">
+  <div class="container">
 
-    {{view 'recent_news'}}
-    <div class="widget stacked">
+    <div class="row">
 
-      <div class="widget-header">
-        <i class="fa fa-file-text"></i>
-        <h3><a href="#">Contest #101 editorial</a></h3>
-      </div> <!-- /widget-header -->
+      <div class="col-md-7">
 
-      <div class="widget-content">
+        {{view 'recent_news'}}
+        <div class="widget stacked">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="widget-header">
+            <i class="fa fa-file-text"></i>
+            <h3><a href="#">Contest #101 editorial</a></h3>
+          </div> <!-- /widget-header -->
 
+          <div class="widget-content">
 
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-        officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.</p>
-
-      </div> <!-- /widget-content -->
-
-    </div> <!-- /widget -->
-
-  </div> <!-- /span6 -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
 
-  <div class="col-md-5">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum.</p>
 
-    {{view 'top_hackers'}}
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            mollit anim id est laborum.</p>
 
-  </div> <!-- /span6 -->
+          </div> <!-- /widget-content -->
 
-</div> <!-- /row -->
+        </div> <!-- /widget -->
+
+      </div> <!-- /span6 -->
+
+
+      <div class="col-md-5">
+
+        {{view 'top_hackers'}}
+
+      </div> <!-- /span6 -->
+
+    </div> <!-- /row -->
+
+  </div> <!-- /container -->
+
+</div> <!-- /main -->
