--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -53,7 +53,7 @@
           </li>
 
           <li class="dropdown">
-            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+            {{#link-to 'faqs' class="dropdown-toggle" data-toggle="dropdown"}}
               <i class="fa fa-question"></i>
               <span>Help</span>
             {{/link-to}}
