--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,30 +7,7 @@
       <div class="col-md-7">
 
         {{view 'recent_news'}}
-        <div class="widget stacked">
-
-          <div class="widget-header">
-            <i class="fa fa-file-text"></i>
-            <h3><a href="#">Contest #101 editorial</a></h3>
-          </div> <!-- /widget-header -->
-
-          <div class="widget-content">
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-            mollit anim id est laborum.</p>
-
-          </div> <!-- /widget-content -->
-
-        </div> <!-- /widget -->
+        {{view 'editorial'}}
 
       </div> <!-- /span6 -->
 
