--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,7 +7,7 @@
       <div class="col-md-7">
 
         {{view 'recent_news'}}
-        {{view 'editorial'}}
+        {{view 'recent_editorials'}}
 
       </div> <!-- /span6 -->
 
