Add some more tests

--- a/app/templates/views/recent-editorials.hbs
+++ b/app/templates/views/recent-editorials.hbs
@@ -1,8 +1,8 @@
-<div class="widget stacked">
+<div class="widget stacked recent-editorials">
 
   <div class="widget-header">
     <i class="fa fa-file-text"></i>
-    <h3><a href="#">Contest #101 editorial</a></h3>
+    <h3><a href="#">Recent Editorials</a></h3>
   </div> <!-- /widget-header -->
 
   <div class="widget-content">
