--- a/app/templates/views/recent-news.hbs
+++ b/app/templates/views/recent-news.hbs
@@ -1,4 +1,4 @@
-<div class="widget widget-nopad stacked">
+<div class="widget widget-nopad stacked recent-news">
 
   <div class="widget-header">
     <i class="fa fa-list-alt"></i>
