--- a/app/templates/views/top-hackers.hbs
+++ b/app/templates/views/top-hackers.hbs
@@ -1,8 +1,8 @@
-<div class="widget stacked widget-table action-table">
+<div class="widget stacked widget-table action-table top-hackers">
 
   <div class="widget-header">
     <i class="fa fa-th-list"></i>
-    <h3>Top 10 brute hackers</h3>
+    <h3>Top Brute Hackers</h3>
   </div> <!-- /widget-header -->
 
   <div class="widget-content">
