Change layout of recent-editorials widget on homepage

--- a/app/templates/views/recent-editorials.hbs
+++ b/app/templates/views/recent-editorials.hbs
@@ -1,4 +1,4 @@
-<div class="widget stacked recent-editorials">
+<div class="widget widget-nopad stacked recent-editorials">
 
   <div class="widget-header">
     <i class="fa fa-file-text"></i>
@@ -7,17 +7,46 @@
 
   <div class="widget-content">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
+    <ul class="news-items">
+      <li>
 
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-    officia deserunt mollit anim id est laborum.</p>
+      <div class="news-item-detail">
+        <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
+        <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
+        elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      </div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-    mollit anim id est laborum.</p>
+      <div class="news-item-date">
+        <span class="news-item-day">08</span>
+        <span class="news-item-month">Mar</span>
+      </div>
+      </li>
+      <li>
+      <div class="news-item-detail">
+        <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
+        <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
+        elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      </div>
+
+      <div class="news-item-date">
+        <span class="news-item-day">08</span>
+        <span class="news-item-month">Mar</span>
+      </div>
+      </li>
+      <li>
+      <div class="news-item-detail">
+        <a href="javascript:;" class="news-item-title">Duis aute irure dolor in reprehenderit</a>
+        <p class="news-item-preview">Lorem ipsum dolor sit amet, consectetur adipisicing
+        elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      </div>
+
+      <div class="news-item-date">
+        <span class="news-item-day">08</span>
+        <span class="news-item-month">Mar</span>
+      </div>
+      </li>
+    </ul>
 
   </div> <!-- /widget-content -->
 
