--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -46,7 +46,7 @@
           </li>
 
           <li class="dropdown">
-            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+            {{#link-to 'rankings' class="dropdown-toggle" data-toggle="dropdown"}}
               <i class="fa fa-trophy"></i>
               <span>Ratings</span>
             {{/link-to}}
