Use more reasonable stub data in overall rankings table

--- a/app/templates/rankings.hbs
+++ b/app/templates/rankings.hbs
@@ -21,50 +21,57 @@
                   <th>Rank</th>
                   <th>Name</th>
                   <th>Rating</th>
+                  <th>Contests</th>
                   <th>Solved</th>
                 </tr>
               </thead>
               <tbody>
               <tr>
                 <td>1</td>
-                <td><a class="rated-user user-red" href="#">Grandmaster</a></td>
-                <td>2200+</td>
-                <td>950</td>
+                <td><a class="rated-user user-red" href="#">Fayimora</a></td>
+                <td>2200</td>
+                <td></td>
+                <td>50</td>
               </tr>
 
               <tr>
                 <td>2</td>
-                <td><a class="rated-user user-orange" href="#">Master</a></td>
-                <td>1900 - 2199</td>
-                <td>950</td>
+                <td><a class="rated-user user-orange" href="#">Aqib Mustaq</a></td>
+                <td>1900</td>
+                <td></td>
+                <td>40</td>
               </tr>
 
               <tr>
                 <td>3</td>
-                <td><a class="rated-user user-violet" href="#">Candidate Master</a></td>
-                <td>1700 - 1899</td>
-                <td>950</td>
+                <td><a class="rated-user user-violet" href="#">Mesfin Mebrate</a></td>
+                <td>1700</td>
+                <td></td>
+                <td>30</td>
               </tr>
 
               <tr>
                 <td>4</td>
-                <td><a class="rated-user user-blue" href="#">Expert</a></td>
-                <td>1500 - 1699</td>
-                <td>950</td>
+                <td><a class="rated-user user-blue" href="#">Usman Naeem Wasteman</a></td>
+                <td>1500</td>
+                <td></td>
+                <td>20</td>
               </tr>
 
               <tr>
                 <td>5</td>
-                <td><a class="user-green rated-user" href="#">Specialist</a></td>
-                <td>1350 - 1499</td>
-                <td>950</td>
+                <td><a class="user-green rated-user" href="#">Vim Tmux</a></td>
+                <td>1350</td>
+                <td></td>
+                <td>10</td>
               </tr>
 
               <tr>
                 <td>6</td>
-                <td><a class="rated-user user-gray" href="#">Newbie</a></td>
-                <td>0 - 1199</td>
-                <td>950</td>
+                <td><a class="rated-user user-gray" href="#">Newbie n00b</a></td>
+                <td>0</td>
+                <td></td>
+                <td>1</td>
               </tr>
 
               </tbody>
