Change rankings table header

--- a/app/templates/rankings.hbs
+++ b/app/templates/rankings.hbs
@@ -10,7 +10,7 @@
 
           <div class="widget-header">
             <i class="fa fa-th-list"></i>
-            <h3>Rankings</h3>
+            <h3>Overall Rankings</h3>
           </div> <!-- /widget-header -->
 
           <div class="widget-content">
@@ -71,7 +71,7 @@
                 <td><a class="rated-user user-gray" href="#">Newbie n00b</a></td>
                 <td>0</td>
                 <td></td>
-                <td>1</td>
+                <td>0</td>
               </tr>
 
               </tbody>
