--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -48,7 +48,7 @@
           <li class="dropdown">
             {{#link-to 'rankings' class="dropdown-toggle" data-toggle="dropdown"}}
               <i class="fa fa-trophy"></i>
-              <span>Ratings</span>
+              <span>Rankings</span>
             {{/link-to}}
           </li>
 
