DRY up code! Move 'main' and 'container' divs to the application template

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,10 @@
 
 {{partial "subnavigation"}}
 
-{{outlet}}
+<div class="main">
+  <div class="container">
+    {{outlet}}
+  </div>
+</div>
 
 {{partial "footer"}}
