--- a/app/templates/rankings.hbs
+++ b/app/templates/rankings.hbs
@@ -1,86 +1,82 @@
-<div class="main">
+<div class="row">
 
-  <div class="container">
+  <div class="col-md-9">
 
-    <div class="row">
+    <div class="widget stacked widget-table action-table rankings">
 
-      <div class="col-md-9">
+      <div class="widget-header">
+        <i class="fa fa-th-list"></i>
+        <h3>Overall Rankings</h3>
+      </div> <!-- /widget-header -->
 
-        <div class="widget stacked widget-table action-table rankings">
+      <div class="widget-content">
 
-          <div class="widget-header">
-            <i class="fa fa-th-list"></i>
-            <h3>Overall Rankings</h3>
-          </div> <!-- /widget-header -->
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Rank</th>
+              <th>Name</th>
+              <th>Rating</th>
+              <th>Contests</th>
+              <th>Solved</th>
+            </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>1</td>
+            <td><a class="rated-user user-red" href="#">Fayimora</a></td>
+            <td>2200</td>
+            <td></td>
+            <td>50</td>
+          </tr>
 
-          <div class="widget-content">
+          <tr>
+            <td>2</td>
+            <td><a class="rated-user user-orange" href="#">Aqib Mustaq</a></td>
+            <td>1900</td>
+            <td></td>
+            <td>40</td>
+          </tr>
 
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th>Rank</th>
-                  <th>Name</th>
-                  <th>Rating</th>
-                  <th>Contests</th>
-                  <th>Solved</th>
-                </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td>1</td>
-                <td><a class="rated-user user-red" href="#">Fayimora</a></td>
-                <td>2200</td>
-                <td></td>
-                <td>50</td>
-              </tr>
+          <tr>
+            <td>3</td>
+            <td><a class="rated-user user-violet" href="#">Mesfin Mebrate</a></td>
+            <td>1700</td>
+            <td></td>
+            <td>30</td>
+          </tr>
 
-              <tr>
-                <td>2</td>
-                <td><a class="rated-user user-orange" href="#">Aqib Mustaq</a></td>
-                <td>1900</td>
-                <td></td>
-                <td>40</td>
-              </tr>
+          <tr>
+            <td>4</td>
+            <td><a class="rated-user user-blue" href="#">Usman Naeem Wasteman</a></td>
+            <td>1500</td>
+            <td></td>
+            <td>20</td>
+          </tr>
 
-              <tr>
-                <td>3</td>
-                <td><a class="rated-user user-violet" href="#">Mesfin Mebrate</a></td>
-                <td>1700</td>
-                <td></td>
-                <td>30</td>
-              </tr>
+          <tr>
+            <td>5</td>
+            <td><a class="user-green rated-user" href="#">Vim Tmux</a></td>
+            <td>1350</td>
+            <td></td>
+            <td>10</td>
+          </tr>
 
-              <tr>
-                <td>4</td>
-                <td><a class="rated-user user-blue" href="#">Usman Naeem Wasteman</a></td>
-                <td>1500</td>
-                <td></td>
-                <td>20</td>
-              </tr>
+          <tr>
+            <td>6</td>
+            <td><a class="rated-user user-gray" href="#">Newbie n00b</a></td>
+            <td>0</td>
+            <td></td>
+            <td>0</td>
+          </tr>
 
-              <tr>
-                <td>5</td>
-                <td><a class="user-green rated-user" href="#">Vim Tmux</a></td>
-                <td>1350</td>
-                <td></td>
-                <td>10</td>
-              </tr>
+          </tbody>
+          <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
+        </table>
+      </div> <!-- /widget-content -->
 
-              <tr>
-                <td>6</td>
-                <td><a class="rated-user user-gray" href="#">Newbie n00b</a></td>
-                <td>0</td>
-                <td></td>
-                <td>0</td>
-              </tr>
+    </div> <!-- /widget -->
 
-              </tbody>
-              <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
-            </table>
-          </div> <!-- /widget-content -->
-
-        </div> <!-- /widget -->
-      </div>
-    </div>
   </div>
-</div>
+
+</div> <!-- /row -->
