--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -42,7 +42,7 @@
           <li>{{link-to 'My Profile'}}</li>
           <li>{{link-to 'My Groups'}}</li>
           <li class="divider"></li>
-          <li>{{link-to 'Logout'}}</li>
+          <li>{{link-to 'Logout' 'login'}}</li>
         </ul>
 
         </li>
