--- a/app/templates/_subnavigation.hbs
+++ b/app/templates/_subnavigation.hbs
@@ -20,29 +20,17 @@
           </li>
 
           <li class="dropdown">
-            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+            {{#link-to 'contests' class="dropdown-toggle" data-toggle="dropdown"}}
               <i class="fa fa-th"></i>
               <span>Contests</span>
-              <b class="caret"></b>
             {{/link-to}}
-
-            <ul class="dropdown-menu">
-              <li>{{link-to 'Single Round Matches'}}</li>
-              <li>{{link-to 'Marathons'}}</li>
-            </ul>
           </li>
 
           <li class="dropdown">
             {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
               <i class="fa fa-gears"></i>
               <span>Practice</span>
-              <b class="caret"></b>
             {{/link-to}}
-
-            <ul class="dropdown-menu">
-              <li>{{link-to 'Single Round Matches'}}</li>
-              <li>{{link-to 'Marathons'}}</li>
-            </ul>
           </li>
 
           <li class="dropdown">
