Change button colors on contests page.
Make registration button green and ranking button for individual contests blue.

--- a/app/templates/contests.hbs
+++ b/app/templates/contests.hbs
@@ -21,21 +21,21 @@
           <td><h4>Goodbye 2013</h4> A <em>little</em> description, if available goes here </td>
           <td>31st December 2013 <br />04:00pm UTC-1</td>
           <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-primary">Register</a><br /><br /><a>32</a> Registered</td>
+          <td><a href="" role="button" class="btn btn-success">Register</a><br /><br /><a>32</a> Registered</td>
         </tr>
 
         <tr>
           <td><h4>Welcome 2014</h4></td>
           <td>7th January 2014 <br />04:00pm UTC-1</td>
           <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-primary">Register</a><br /><br /><a>46</a> Registered</td>
+          <td><a href="" role="button" class="btn btn-success">Register</a><br /><br /><a>46</a> Registered</td>
         </tr>
 
         <tr>
           <td><h4>Contest #101</h4></td>
           <td>14th January 2014 <br />03:00pm UTC-1</td>
           <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-primary">Register</a><br /><br /><a>20</a> Registered</td>
+          <td><a href="" role="button" class="btn btn-success">Register</a><br /><br /><a>20</a> Registered</td>
         </tr>
       </tbody>
       <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
@@ -68,21 +68,21 @@
           <td><h4>Goodbye 2013</h4></td>
           <td>31st December 2013 <br />04:00pm UTC-1</td>
           <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-primary">Rankings</a><br /></td>
+          <td><a href="" role="button" class="btn btn-info">Rankings</a><br /></td>
         </tr>
 
         <tr>
           <td><h4>Welcome 2014</h4></td>
           <td>7th January 2014 <br />04:00pm UTC-1</td>
           <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-primary">Rankings</a><br /></td>
+          <td><a href="" role="button" class="btn btn-info">Rankings</a><br /></td>
         </tr>
 
         <tr>
           <td><h4>Contest #101</h4></td>
           <td>14th January 2014 <br />03:00pm UTC-1</td>
           <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-primary">Rankings</a><br /></td>
+          <td><a href="" role="button" class="btn btn-info">Rankings</a><br /></td>
         </tr>
       </tbody>
       <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
